--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" href="images/logo.png"  />
+
 </head>
 <body>
 
